--- a/ledelicesdessens.html
+++ b/ledelicesdessens.html
@@ -20,15 +20,15 @@
     <main class="main_page">
         <span>
             <img class="illustration_page" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-            alt="photo d'une assiette du restaurant le delice des sens">
+                alt="photo d'une assiette du restaurant le delice des sens">
         </span>
         <div class="menu_page">
             <div class="ss_titre_page">
-                <h2 class="name_restaurant">Le délice des sens</h2>
+                <h2 class="restaurant_name">Le délice des sens</h2>
                 <i class="far fa-heart heart_page"></i>
-        </div>
-        <section class="detail_menu--entrées">
-            <h3>ENTREÉS</h3>
+            </div>
+            <section class="detail_menu--entrées">
+                <h3>ENTREÉS</h3>
                 <article class="menu_1">
                     <h4>Tartare de thon</h4>
                     <div class="description_menu">
@@ -42,66 +42,66 @@
                         <p>Et sa farandole de petits légumes</p>
                         <p class="price">35€</p>
                     </div>
-                </article>       
+                </article>
                 <article class="menu_3">
                     <h4>Velouté de cèpes</h4>
                     <div class="description_menu">
                         <p>Aux truffes</p>
                         <p class="price">20€</p>
-                    </div>    
+                    </div>
                 </article>
-        </section>
-        <section class="detail_menu--plats">
-            <h3>PLATS</h3>
-            <article class="menu_4">
-                <h4>Poulet rôti aux herbes de Provence</h4>
-                <div class="description_menu">
-                    <p>Et sa crème de truffe</p>
-                    <p class="price">40€</p>
-                </div>
-            </article>
-            <article class="menu_5">
-                <h4>Langouste rôtie</h4>
-                <div class="description_menu">
-                    <p>Et ses légumes de saison</p>
-                    <p class="price">35€</p>
-                </div>
-            </article>       
-            <article class="menu_6">
-                <h4>Côte de boeuf Angus</h4>
-                <div class="description_menu">
-                    <p>Et sa purée de panais</p>
-                    <p class="price">44€</p>
-                </div> 
-            </article> 
-        </section> 
-        <section class="detail_menu--desserts">
-            <h3>DESSERTS</h3>
-            <article class="menu_7">
-                <h4>Farandole de desserts</h4>
-                <div class="description_menu">
-                    <p>Du chef</p>
-                    <p class="price">18€</p>
-                </div>
-            </article>
-            <article class="menu_8">
-                <h4>Crème brulée</h4>
-                <div class="description_menu">
-                    <p>Revisitée</p>
-                    <p class="price">22€</p>
-                </div>
-            </article>       
-            <article class="menu_9">
-                <h4>Tiramisu</h4>
-                <div class="description_menu">
-                    <p>À la noisette</p>
-                    <p class="price">23€</p>
-                </div> 
-            </article> 
-        </section>
-        <div class="button--commande">
-            <input class="commander" type="button" value="Commander">
-        </div>
+            </section>
+            <section class="detail_menu--plats">
+                <h3>PLATS</h3>
+                <article class="menu_4">
+                    <h4>Poulet rôti aux herbes de Provence</h4>
+                    <div class="description_menu">
+                        <p>Et sa crème de truffe</p>
+                        <p class="price">40€</p>
+                    </div>
+                </article>
+                <article class="menu_5">
+                    <h4>Langouste rôtie</h4>
+                    <div class="description_menu">
+                        <p>Et ses légumes de saison</p>
+                        <p class="price">35€</p>
+                    </div>
+                </article>
+                <article class="menu_6">
+                    <h4>Côte de boeuf Angus</h4>
+                    <div class="description_menu">
+                        <p>Et sa purée de panais</p>
+                        <p class="price">44€</p>
+                    </div>
+                </article>
+            </section>
+            <section class="detail_menu--desserts">
+                <h3>DESSERTS</h3>
+                <article class="menu_7">
+                    <h4>Farandole de desserts</h4>
+                    <div class="description_menu">
+                        <p>Du chef</p>
+                        <p class="price">18€</p>
+                    </div>
+                </article>
+                <article class="menu_8">
+                    <h4>Crème brulée</h4>
+                    <div class="description_menu">
+                        <p>Revisitée</p>
+                        <p class="price">22€</p>
+                    </div>
+                </article>
+                <article class="menu_9">
+                    <h4>Tiramisu</h4>
+                    <div class="description_menu">
+                        <p>À la noisette</p>
+                        <p class="price">23€</p>
+                    </div>
+                </article>
+            </section>
+            <div class="button--commande">
+                <input class="commander" type="button" value="Commander">
+            </div>
         </div>
     </main>
     <footer>
