--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
         <footer>
             <h4 class="footer_h4">ohmyfood</h4>
             <div class="footer_list">
-                <span class="p_footer"><i class="fas fa-utensils"></i><a class="a__element--modif1" href="#">Proposer un restaurant</a>
+                <span class="p_footer"><i class="fas fa-utensils"></i><a class="a__element--modif1" href="#">Proposer un
+                        restaurant</a>
                 </span>
                 <span class="p_footer"><i class="fas fa-handshake"></i><a class="a__element--modif2" href="#">Devenir
                         partenaire</a></span>
@@ -116,7 +117,7 @@
             </div>
         </footer>
     </div>
-    </div>
+
 </body>
 
 </html>
